# swagger_server/controllers/taxonomy_controller.py
@@ -11,7 +11,7 @@ from flask import request, jsonify
 from statistics import mean
 from .ControllerCommon import params, settings, formatters
 
-def taxon(taxon=None, includelower=None, hierarchy=None):
+def tax(taxon=None, includelower=None, hierarchy=None):
     """
     Return taxonomic hierarchy and subtaxa in various formats.
 
@@ -36,32 +36,31 @@ def taxon(taxon=None, includelower=None, hierarchy=None):
         show_params = list()
 
     # Query PBDB from systemics
-    if hiearchy:
-        t0 = time.tim()
-        base_url = settings.config('db_api', 'pbdb') + 'taxa/list.json'
-        payload = dict()
-        payload.update(vocab='pbdb', show='full', order='hierarchy')
-        payload.update(name=taxon)
+    #  if hiearchy:
+        #  t0 = time.time()
+        #  base_url = settings.config('db_api', 'pbdb') + 'taxa/list.json'
+        #  payload = dict()
+        #  payload.update(vocab='pbdb', show='full', order='hierarchy')
+        #  payload.update(name=taxon)
 
-        resp = requests.get(base_url,
-                            params=payload,
-                            timeout=settings.config('timeout', 'pbdb'))
+        #  resp = requests.get(base_url,
+                            #  params=payload,
+                            #  timeout=settings.config('timeout', 'pbdb'))
 
-        if resp.status_code == 200:
-            resp_json = resp.json()
-            tax_up = dict()
-            try:
-                rec = resp.json['records']
-            except:
-                return connexion.problem(status=400,
-                                         title='Bad Request',
-                                         detail=taxon + ' not found.',
-                                         type='about:blank')
-            if rec.get('kingdom'):
-                tax_up.append(
-            if rec.get('phylum'):
-            if rec.get('class'):
-            if rec.get('order'):
-            if rec.get('family'):
-            if rec.get('genus'):
-            if rec.get('species'):
+        #  if resp.status_code == 200:
+            #  resp_json = resp.json()
+            #  tax_up = dict()
+            #  try:
+                #  rec = resp.json['records']
+            #  except:
+                #  return connexion.problem(status=400,
+                                         #  title='Bad Request',
+                                         #  detail=taxon + ' not found.',
+                                         #  type='about:blank')
+            #  if rec.get('kingdom'):
+            #  if rec.get('phylum'):
+            #  if rec.get('class'):
+            #  if rec.get('order'):
+            #  if rec.get('family'):
+            #  if rec.get('genus'):
+            #  if rec.get('species'):
